[gd_scene load_steps=5 format=3 uid="uid://0uuaysvmijny"]

[ext_resource type="Script" path="res://src/game/levels/FightZone.gd" id="1_d8fld"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wstt2"]
size = Vector2(20, 224)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wvf3m"]
size = Vector2(9, 224)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2hh67"]
size = Vector2(20, 224)

[node name="FightZone" type="Area2D"]
script = ExtResource("1_d8fld")

[node name="Timer" type="Timer" parent="."]
one_shot = true

[node name="InitialLimit" type="StaticBody2D" parent="."]
position = Vector2(160, 0)
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="InitialLimit"]
position = Vector2(-10, 112)
shape = SubResource("RectangleShape2D_wstt2")

[node name="EndZone" type="CollisionShape2D" parent="."]
position = Vector2(484.5, 112)
shape = SubResource("RectangleShape2D_wvf3m")

[node name="EndLimit" type="StaticBody2D" parent="."]
position = Vector2(480, 0)
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="EndLimit"]
position = Vector2(10, 112)
shape = SubResource("RectangleShape2D_2hh67")

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
